--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -14,9 +14,10 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: "False"
           SHOW_PROFILE_VIEWS: "False"
+          SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
+          SHOW_COMMIT: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LOC_CHART: "False"
           UPDATED_DATE_FORMAT: "%m/%d,%Y %H:%M"
